continue from here
svn path=/trunk/kdenonbeta/icecream/; revision=253882

--- a/icecream/client/Makefile.am
+++ b/icecream/client/Makefile.am
@@ -2,5 +2,5 @@ INCLUDES = -I$(srcdir)/../common
 
 bin_PROGRAMS = icecc
 icecc_LDADD = ../common/libcommon.la
-icecc_SOURCES = arg.c climasq.c clinet.c clirpc.c cpp.c distcc.c implicit.c strip.c
+icecc_SOURCES = arg.c climasq.c clinet.c clirpc.c cpp.c main.c implicit.c strip.c
 
