--- a/icecream/daemon/Makefile.am
+++ b/icecream/daemon/Makefile.am
@@ -1,4 +1,4 @@
 INCLUDES = -I$(srcdir)/../services
 
 noinst_PROGRAMS = iceccd
-iceccd_SOURCES = ncpus.c main.cpp serve.cpp
+iceccd_SOURCES = ncpus.c main.cpp serve.cpp arg.cpp tempfile.c
