some more cleaning up
svn path=/trunk/kdenonbeta/icecream/; revision=255208

--- a/icecream/client/Makefile.am
+++ b/icecream/client/Makefile.am
@@ -3,7 +3,7 @@ INCLUDES = -I$(srcdir)/../services
 bin_PROGRAMS = icecc
 icecc_SOURCES = main.cpp arg.cpp argutil.cpp climasq.cpp clinet.cpp \
 	cpp.cpp exec.cpp filename.cpp implicit.cpp netutil.cpp io.cpp \
-	safeguard.cpp sendfile.cpp strip.cpp tempfile.cpp timeval.cpp util.cpp
+	safeguard.cpp sendfile.cpp strip.cpp tempfile.cpp util.cpp
 
 CLEANFILES = icecc++
 
