--- a/icecream/daemon/Makefile.am
+++ b/icecream/daemon/Makefile.am
@@ -2,3 +2,4 @@ INCLUDES = -I$(srcdir)/../services
 
 noinst_PROGRAMS = iceccd
 iceccd_SOURCES = ncpus.c main.cpp serve.cpp tempfile.c workit.cpp
+iceccd_LDADD = ../services/libcommon.la
