--- a/icecream/services/Makefile.am
+++ b/icecream/services/Makefile.am
@@ -1,4 +1,5 @@
+# TODO: noinst, but for now a shared one is easier
+lib_LTLIBRARIES = libcommon.la
+# libservices_la_SOURCES = scheduler.cpp comm.cpp
 
-noinst_LTLIBRARIES = libservices.la
-libservices_la_SOURCES = scheduler.cpp comm.cpp
-
+libcommon_la_SOURCES = job.cpp
