removing unneeded messages
svn path=/trunk/kdenonbeta/icecream/; revision=256684

--- a/icecream/services/Makefile.am
+++ b/icecream/services/Makefile.am
@@ -1,5 +1,5 @@
 # TODO: noinst, but for now a shared one is easier
 lib_LTLIBRARIES = libcommon.la
-# libservices_la_SOURCES = scheduler.cpp comm.cpp
+# libservices_la_SOURCES = scheduler.cpp 
 
-libcommon_la_SOURCES = job.cpp
+libcommon_la_SOURCES = job.cpp comm.cpp 
