--- a/icecream/configure.ac
+++ b/icecream/configure.ac
@@ -27,7 +27,7 @@ fi
 AC_PROG_MAKE_SET
 AC_PROG_INSTALL
 AC_C_INLINE
-AC_ENABLE_STATIC([yes])
+AC_ENABLE_STATIC([no])
 AC_PROG_LIBTOOL
 
 ########################################################################
