trying to make M_*_SCHEDULER work
svn path=/trunk/kdenonbeta/icecream/; revision=256781

--- a/icecream/services/Makefile.am
+++ b/icecream/services/Makefile.am
@@ -1,5 +1,8 @@
 # TODO: noinst, but for now a shared one is easier
 lib_LTLIBRARIES = libcommon.la
-# libservices_la_SOURCES = scheduler.cpp 
 
 libcommon_la_SOURCES = job.cpp comm.cpp 
+
+bin_PROGRAMS = scheduler
+scheduler_SOURCES = scheduler.cpp
+scheduler_LDADD = libcommon.la
