compression using minilzo
svn path=/trunk/kdenonbeta/icecream/; revision=256824

--- a/icecream/configure.ac
+++ b/icecream/configure.ac
@@ -131,6 +131,24 @@ AC_CHECK_FUNCS([strndup mmap strlcpy])
 
 AC_CHECK_DECLS([snprintf, vsnprintf, vasprintf, asprintf, strndup])
 
-AC_CONFIG_FILES([Makefile client/Makefile daemon/Makefile services/Makefile])
+dnl === LZO
+dnl Checks for typedefs and structures
+AC_CHECK_TYPE(ptrdiff_t,long)
+AC_TYPE_SIZE_T
+AC_CHECK_SIZEOF(unsigned short)
+AC_CHECK_SIZEOF(unsigned)
+AC_CHECK_SIZEOF(unsigned long)
+AC_CHECK_SIZEOF(char *)
+AC_CHECK_SIZEOF(ptrdiff_t)
+AC_CHECK_SIZEOF(size_t)
+
+dnl Checks for compiler characteristics
+dnl AC_C_CONST
+
+dnl Checks for library functions
+AC_CHECK_FUNCS(memcmp memcpy memmove memset)
+dnl === END LZO
+
+AC_CONFIG_FILES([Makefile minilzo/Makefile client/Makefile daemon/Makefile services/Makefile])
 AC_OUTPUT
 
