finding the binary
svn path=/trunk/kdenonbeta/icecream/; revision=260746

--- a/icecream/daemon/Makefile.am
+++ b/icecream/daemon/Makefile.am
@@ -1,5 +1,5 @@
 INCLUDES = -I$(srcdir)/../services
 
 bin_PROGRAMS = iceccd
-iceccd_SOURCES = ncpus.c main.cpp serve.cpp tempfile.c workit.cpp environment.cpp load.cpp
+iceccd_SOURCES = ncpus.c main.cpp serve.cpp tempfile.c workit.cpp environment.cpp load.cpp findmyself.cpp
 iceccd_LDADD = ../services/libcommon.la
