some fixes for make dist
svn path=/trunk/kdenonbeta/icecream/; revision=262734

--- a/icecream/minilzo/Makefile.am
+++ b/icecream/minilzo/Makefile.am
@@ -44,3 +44,7 @@ AM_CFLAGS = $(L_CFLAGS) $(A_CFLAGS_W) $(L_CFLAGS_W) $(LZO_CFLAGS) $(LZO_DEBUG)
 
 libminilzo_la_SOURCES = minilzo.c
 noinst_LTLIBRARIES = libminilzo.la
+noinst_HEADERS = lzoconf.h minilzo.h
+
+EXTRA_DIST = README.LZO 
+
