--- a/icecream/daemon/Makefile.am
+++ b/icecream/daemon/Makefile.am
@@ -1,4 +1,5 @@
 INCLUDES = -I$(srcdir)/../services
+KDE_CXXFLAGS = $(USE_EXCEPTIONS)
 
 bin_PROGRAMS = iceccd
 iceccd_SOURCES = ncpus.c main.cpp serve.cpp tempfile.c workit.cpp environment.cpp load.cpp findmyself.cpp
