getting somewhere with my failsafe mode
svn path=/trunk/kdenonbeta/icecream/; revision=305397

--- a/icecream/services/Makefile.am
+++ b/icecream/services/Makefile.am
@@ -2,7 +2,7 @@ INCLUDES = -I $(srcdir)/../minilzo
 
 noinst_LTLIBRARIES = libcommon.la
 
-libcommon_la_SOURCES = job.cpp comm.cpp getifaddrs.cpp logging.cpp
+libcommon_la_SOURCES = job.cpp comm.cpp getifaddrs.cpp logging.cpp tempfile.c
 libcommon_la_LIBADD = ../minilzo/libminilzo.la
 
 bin_PROGRAMS = scheduler
