--- a/icecream/client/Makefile.am
+++ b/icecream/client/Makefile.am
@@ -2,7 +2,7 @@ INCLUDES = -I$(srcdir)/../services
 
 bin_PROGRAMS = icecc
 bin_SCRIPTS = create-env
-icecc_SOURCES = main.cpp arg.cpp cpp.cpp local.cpp remote.cpp util.cpp md5.c
+icecc_SOURCES = main.cpp arg.cpp cpp.cpp local.cpp remote.cpp util.cpp md5.c safeguard.cpp
 icecc_LDADD = ../services/libcommon.la
 
 CLEANFILES = icecc++
