support for differing platforms (by uname's .machine) - require ICECC_VERSION to be set for now (read the TODO file if you're annoyed :)   - which in return means iceccd requires being started as root feedback wanted - especially from those that share i686 and i586 build hosts (those poor souls :)
svn path=/trunk/kdenonbeta/icecream/; revision=306953

--- a/icecream/Makefile.cvs
+++ b/icecream/Makefile.cvs
@@ -1,7 +1,7 @@
 
 all:
-	libtoolize --force
+	libtoolize --force --copy
 	aclocal
 	autoconf
 	autoheader
-	automake -a -f || :
+	automake -a -f -c || :
