trying to avoid problems with toplevel kdenonbeta
svn path=/trunk/kdenonbeta/icecream/; revision=317636

--- a/icecream/Makefile.am.in
+++ b/icecream/Makefile.am.in
@@ -1,5 +1,5 @@
 
-SUBDIRS = minilzo services client daemon mon
+COMPILE_FIRST = minilzo services
 AUTOMAKE_OPTIONS = foreign 1.6
 
 include admin/deps.am
