- Trying to approximate 'cp -a' as it exists on Linux, so that we can run   gmake -f Makefile.cvs here on FreeBSD boxen, too.
svn path=/trunk/kdenonbeta/icecream/; revision=340205

--- a/icecream/Makefile.cvs
+++ b/icecream/Makefile.cvs
@@ -2,7 +2,7 @@
 all:
 	if test -d ../../admin; then \
 		rm -rf admin ;\
-		cp -a ../../admin . ;\
+		cp -pRL ../../admin . ;\
 	fi
 
 	if ! test -d admin; then \
