don't support this strange -w feature any longer (doesn't work with NFS, etc, etc)
svn path=/trunk/kdenonbeta/icecream/; revision=342741

--- a/icecream/daemon/Makefile.am
+++ b/icecream/daemon/Makefile.am
@@ -2,5 +2,5 @@ INCLUDES = -I$(srcdir)/../services
 # KDE_CXXFLAGS = $(USE_EXCEPTIONS)
 
 bin_PROGRAMS = iceccd
-iceccd_SOURCES = ncpus.c main.cpp serve.cpp workit.cpp environment.cpp load.cpp findmyself.cpp
+iceccd_SOURCES = ncpus.c main.cpp serve.cpp workit.cpp environment.cpp load.cpp
 iceccd_LDADD = ../services/libcommon.la
