Changelogs are quite interesting if you want to figure what happened till last version - and autogenerated Changelogs are cool too
svn path=/trunk/kdenonbeta/icecream/; revision=344104

--- a/icecream/Makefile.am.in
+++ b/icecream/Makefile.am.in
@@ -4,3 +4,8 @@ AUTOMAKE_OPTIONS = foreign 1.6
 
 include admin/deps.am
 
+.PHONY: changes
+changes:
+	sed -e "s#  *#:'#; s#\$$#>'#;" $$HOME/prod/kde-common/accounts | sed -e 's/  *\([^ ]*\)$$/ <\1/' > Changes.users
+	cvs2cl.pl -I "CVS_SILENT.*" -U Changes.users
+	rm Changes.users
