daemons are in sbin
svn path=/trunk/kdenonbeta/icecream/; revision=371076

--- a/icecream/services/Makefile.am
+++ b/icecream/services/Makefile.am
@@ -5,7 +5,7 @@ noinst_LTLIBRARIES = libcommon.la
 libcommon_la_SOURCES = job.cpp comm.cpp getifaddrs.cpp logging.cpp tempfile.c
 libcommon_la_LIBADD = ../minilzo/libminilzo.la
 
-bin_PROGRAMS = scheduler
+sbin_PROGRAMS = scheduler
 scheduler_SOURCES = scheduler.cpp
 scheduler_LDADD = libcommon.la
 
