create admin dir via Makefile.cvs
svn path=/trunk/kdenonbeta/icecream/; revision=462082

--- a/icecream/debian/rules
+++ b/icecream/debian/rules
@@ -32,8 +32,11 @@ objdir = $(CURDIR)/obj-$(DEB_BUILD_GNU_TYPE)
 
 -include debian/debiandirs
 
-debian/debiandirs: admin/debianrules
+debian/debiandirs: admin admin/debianrules
 	perl -w admin/debianrules echodirs > debian/debiandirs
+
+admin:
+	$(MAKE) -f Makefile.cvs
 
 configure: configure-stamp
 configure-stamp:
