--- a/configure.in
+++ b/configure.in
@@ -9,8 +9,8 @@ AM_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
 
 dnl Checks for programs
-CFLAGS=-g
-CXXFLAGS=-g
+CFLAGS="-g $CFLAGS"
+CXXFLAGS="-g $CFLAGS"
 AC_PROG_CC
 AC_PROG_CXX
 if test "$GCC" = yes 
