--- a/configure.in
+++ b/configure.in
@@ -11,13 +11,30 @@ AC_CANONICAL_HOST
 dnl Checks for programs
 AC_PROG_CC
 AC_PROG_CXX
-if test "$GCC" = yes 
-then
+if test "$GCC" = yes; then
+    cast_align=-Wcast-align
+    AC_MSG_CHECKING([if GCC is actually Clang])
+    AC_TRY_COMPILE(
+        [],
+        [
+            #ifdef __clang__
+            return 0;
+            #else
+            fail
+            #endif
+        ],
+        [
+            AC_MSG_RESULT(yes)
+            # The code has numerous cast alignment warnings that only clang warns about,
+            # and it probably(?) doesn't matter in practice.
+            cast_align=
+        ],
+        [ AC_MSG_RESULT(no) ])
     CFLAGS="-g -W -Wall \
--Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings \
+-Wshadow -Wpointer-arith $cast_align -Wwrite-strings \
 -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes \
 -Wnested-externs $CFLAGS"
-    CXXFLAGS=" -g -W -Wall -Wpointer-arith -Wcast-align -Wwrite-strings $CXXFLAGS"
+    CXXFLAGS=" -g -W -Wall -Wpointer-arith $cast_align -Wwrite-strings $CXXFLAGS"
     AC_MSG_NOTICE([Adding gcc options: $CFLAGS])
 fi
 
