Add support for libcap-ng
Signed-off-by: Rodrigo Belem <rodrigo.belem@gmail.com>

--- a/configure.in
+++ b/configure.in
@@ -164,6 +164,14 @@ fi
 AC_CHECK_LIB(resolv, hstrerror, , , [-lnsl -lsocket])
 AC_CHECK_LIB(resolv, inet_aton, , , [-lnsl -lsocket])
 
+AC_CHECK_LIB(cap-ng, capng_clear, have_libcap_ng=yes, have_libcap_ng=no)
+AM_CONDITIONAL(HAVE_LIBCAP_NG, test x$have_libcap_ng = xyes)
+
+if test x$have_libcap_ng = xyes ; then
+    LIBS="-lcap-ng $LIBS"
+    AC_DEFINE(HAVE_LIBCAP_NG,1,[Define if system has libcap-ng installed])
+fi
+
 AC_CHECK_FUNCS([setsid flock lockf hstrerror strerror setuid setreuid])
 AC_CHECK_FUNCS([getuid geteuid mcheck wait4 wait3 waitpid setgroups getcwd])
 AC_CHECK_FUNCS([snprintf vsnprintf vasprintf asprintf getcwd getwd])
