--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -3,6 +3,6 @@ INCLUDES = -I$(srcdir)/../services
 
 sbin_PROGRAMS = iceccd
 iceccd_SOURCES = ncpus.c main.cpp serve.cpp workit.cpp environment.cpp load.cpp
-iceccd_LDADD = ../services/libicecc.la $(LIB_KINFO)
+iceccd_LDADD = ../services/libicecc.la $(LIB_KINFO) $(CAPNG_LDADD)
 noinst_HEADERS = environment.h load.h ncpus.h serve.h workit.h
 
