--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,23 @@ depcomp
 install-sh
 ltmain.sh
 missing
+*.o
+*.lo
+.deps
+.libs
+Makefile
+client/icecc
+compilerwrapper/compilerwrapper
+config.h
+config.log
+config.status
+daemon/iceccd
+libtool
+minilzo/libminilzo.la
+services/icecc.pc
+services/libicecc.la
+services/scheduler
+suse/icecream.spec
+doc/*.1
+doc/*.7
+doc/index.html
