Update autoconf and automake macros
 - Rename configure.in to configure.ac
 - Add autogen.sh script
 - Update gitignore for out of tree builds
 - Update the autotools build system to be bit more readable.
 - Whitespace 4spaces instead of tabs.
 - Update the automake check to be done in one step.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,13 @@
+ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = minilzo services daemon client doc suse compilerwrapper
-AUTOMAKE_OPTIONS = foreign 1.6
+SUBDIRS = \
+    minilzo \
+    services \
+    daemon \
+    client \
+    doc \
+    suse \
+    compilerwrapper
 
-.PHONY: changes
-changes:
-	sed -e "s#  *#:'#; s#\$$#>'#;" $$HOME/prod/kde-common/accounts | sed -e 's/  *\([^ ]*\)$$/ <\1/' > Changes.users
-	cvs2cl.pl -I "CVS_SILENT.*" -U Changes.users
-	rm Changes.users
+dist-hook:
+    git log --date=short --pretty="format:@%cd  %an  <%ae>  [%H]%n%n%s%n%n%e%b" | sed -e "s|^\([^@]\)|\t\1|" -e "s|^@||" >$(distdir)/ChangeLog
