--- a/suse/Makefile.am
+++ b/suse/Makefile.am
@@ -1,2 +1,7 @@
-
-EXTRA_DIST = icecream.spec.in init.icecream logrotate SuSEfirewall.iceccd SuSEfirewall.scheduler sysconfig.icecream
+EXTRA_DIST = \
+    icecream.spec.in \
+    init.icecream \
+    logrotate \
+    SuSEfirewall.iceccd \
+    SuSEfirewall.scheduler \
+    sysconfig.icecream
