Update the autotools build system to be bit more readable.

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -1,8 +1,22 @@
-INCLUDES = -I$(srcdir)/../services
-# KDE_CXXFLAGS = $(USE_EXCEPTIONS)
-
 sbin_PROGRAMS = iceccd
-iceccd_SOURCES = ncpus.c main.cpp serve.cpp workit.cpp environment.cpp load.cpp
-iceccd_LDADD = ../services/libicecc.la $(LIB_KINFO) $(CAPNG_LDADD)
-noinst_HEADERS = environment.h load.h ncpus.h serve.h workit.h
+iceccd_SOURCES = \
+	ncpus.c \
+	main.cpp \
+	serve.cpp \
+	workit.cpp \
+	environment.cpp \
+	load.cpp
+iceccd_LDADD = \
+	../services/libicecc.la \
+	$(LIB_KINFO) \
+	$(CAPNG_LDADD)
+
+AM_CPPFLAGS = \
+	-I$(top_srcdir)/services
+noinst_HEADERS = \
+	environment.h \
+	load.h \
+	ncpus.h \
+	serve.h \
+	workit.h
 
