--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -1,11 +1,25 @@
-INCLUDES = -I$(srcdir)/../services
-
 bin_PROGRAMS = icecc
 pkglibexec_SCRIPTS = icecc-create-env
-icecc_SOURCES = main.cpp arg.cpp cpp.cpp local.cpp remote.cpp util.cpp md5.c safeguard.cpp
-icecc_LDADD = ../services/libicecc.la $(LIBRSYNC)
-noinst_HEADERS = client.h md5.h util.h
-AM_CPPFLAGS = -DPLIBDIR=\"$(pkglibexecdir)\"
+icecc_SOURCES = \
+	main.cpp \
+	arg.cpp \
+	cpp.cpp \
+	local.cpp \
+	remote.cpp \
+	util.cpp \
+	md5.c \
+	safeguard.cpp
+icecc_LDADD = \
+	../services/libicecc.la \
+	$(LIBRSYNC)
+
+noinst_HEADERS = \
+	client.h \
+	md5.h \
+	util.h
+AM_CPPFLAGS = \
+	-DPLIBDIR=\"$(pkglibexecdir)\" \
+	-I$(top_srcdir)/services
 
 EXTRA_DIST = icecc-create-env
 
