Install icecc links in a more convenient dir
Signed-off-by: Rodrigo Belem <rodrigo.belem@gmail.com>

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -25,12 +25,18 @@ EXTRA_DIST = icecc-create-env
 
 install-exec-local:
 	$(mkinstalldirs) $(DESTDIR)$(bindir)
-	for link in g++ gcc c++ cc icerun $(CLANG_SYMLINK_WRAPPERS); do \
-		rm -f $(DESTDIR)$(bindir)/$$link ;\
-		$(LN_S) icecc $(DESTDIR)$(bindir)/$$link ;\
+	rm -f $(DESTDIR)$(bindir)/icerun
+	$(LN_S) $(bindir)/icecc $(DESTDIR)$(bindir)/icerun
+
+	$(mkinstalldirs) $(DESTDIR)$(libexecdir)/icecc/bin
+	for link in g++ gcc c++ cc $(CLANG_SYMLINK_WRAPPERS); do \
+		rm -f $(DESTDIR)$(libexecdir)/icecc/bin/$$link ;\
+		$(LN_S) $(bindir)/icecc $(DESTDIR)$(libexecdir)/icecc/bin/$$link ;\
 	done
 
 uninstall-local:
-	for link in g++ gcc c++ cc icerun $(CLANG_SYMLINK_WRAPPERS); do \
-		rm $(DESTDIR)$(bindir)/$$link ;\
+	rm $(DESTDIR)$(bindir)/icerun
+
+	for link in g++ gcc c++ cc $(CLANG_SYMLINK_WRAPPERS); do \
+		rm $(DESTDIR)$(libexecdir)/icecc/bin/$$link ;\
 	done
