--- a/suse/icecream.spec.in
+++ b/suse/icecream.spec.in
@@ -19,22 +19,25 @@
 
 Name:           icecream
 BuildRequires:  gcc-c++
+%if 0%{?suse_version} > 1110
 BuildRequires:  libcap-ng-devel
+%endif
 Summary:        For Distributed Compile in the Network
 License:        GPL-2.0+ and LGPL-2.1+
-URL:            https://github.com/icecc/icecream
 Group:          Development/Tools/Building
+Url:            https://github.com/icecc/icecream
 Requires:       /bin/tar
 Requires:       /usr/bin/bzip2
 %if 0%{?suse_version}
 PreReq:         %fillup_prereq
 PreReq:         %insserv_prereq
 %endif
-Prereq:         /usr/sbin/useradd /usr/sbin/groupadd
+PreReq:         /usr/sbin/useradd
+PreReq:         /usr/sbin/groupadd
 Requires:       gcc-c++
 Version:        @VERSION@
 Release:        0
-Source0:        ftp://ftp.suse.com/pub/projects/icecream/icecream-%{version}.tar.bz2
+Source0:        ftp://ftp.suse.com/pub/projects/icecream/icecc-%{version}.tar.bz2
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 
 %description
@@ -49,7 +52,7 @@ Requires:       libstdc++-devel
 icecream is the next generation distcc.
 
 %prep
-%setup -q
+%setup -q -n icecc-%{version}
 # DO NOT ADD PATCHES without github reference
 
 %build
@@ -60,6 +63,14 @@ make %{?jobs:-j %jobs}
 
 %install
 make DESTDIR=$RPM_BUILD_ROOT install
+
+# Create symlinks in /opt/icecream/bin on openSUSE <= 1220
+%if 0%{?suse_version} <= 1220
+  mkdir $RPM_BUILD_ROOT/opt/icecream/bin
+  for i in g++ gcc cc c++ clang++ clang; do
+    ln -sf %_bindir/icecc $RPM_BUILD_ROOT/opt/icecream/bin/$i
+  done
+%endif
 
 %preun
 %stop_on_removal icecream
@@ -91,6 +102,9 @@ make DESTDIR=$RPM_BUILD_ROOT install
 %if 0%{?suse_version}
 %_sysconfdir/sysconfig/SuSEfirewall2.d/services/*
 %_localstatedir/adm/fillup-templates/sysconfig.icecream
+%if 0%{?suse_version} <= 1220
+/opt/icecream
+%endif
 %endif
 %attr(-,icecc,icecc)
 %_localstatedir/cache/icecream
