Use docbook2man to generate manpages rather than KDE calls.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,17 +1,27 @@
-STYLESHEET=$(shell kde4-config --path data --locate ksgmltools2/customization/kde-include-man.xsl)
-MEINPROC=meinproc4 --stylesheet $(STYLESHEET)
-icecc.1: $(srcdir)/man-icecc.1.docbook
-	-$(MEINPROC) $(srcdir)/man-icecc.1.docbook
+if WITH_ICECREAM_MAN
 
-icecc-scheduler.1: $(srcdir)/man-icecc-scheduler.1.docbook
-	-$(MEINPROC) $(srcdir)/man-icecc-scheduler.1.docbook
+icecc.1: $(srcdir)/man-icecc.1.xml
+	$(DOCBOOK2X) $<
 
-iceccd.1: $(srcdir)/man-iceccd.1.docbook
-	-$(MEINPROC) $(srcdir)/man-iceccd.1.docbook
+icecc-scheduler.1: $(srcdir)/man-icecc-scheduler.1.xml
+	$(DOCBOOK2X) $<
 
-icecream.7: $(srcdir)/man-icecream.7.docbook
-	-$(MEINPROC) $(srcdir)/man-icecream.7.docbook
+iceccd.1: $(srcdir)/man-iceccd.1.xml
+	$(DOCBOOK2X) $<
 
-dist_man_MANS = icecc.1 iceccd.1 icecc-scheduler.1 icecream.7
+icecream.7: $(srcdir)/man-icecream.7.xml
+	$(DOCBOOK2X) $<
 
-EXTRA_DIST = man-icecc.1.docbook man-iceccd.1.docbook man-icecc-scheduler.1.docbook man-icecream.7.docbook
+dist_man_MANS = \
+	icecc.1 \
+	iceccd.1 \
+	icecc-scheduler.1 \
+	icecream.7
+
+endif
+
+EXTRA_DIST = \
+	man-icecc.1.xml \
+	man-iceccd.1.xml \
+	man-icecc-scheduler.1.xml \
+	man-icecream.7.xml
